[package]
name = "rustspider"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.2"
serde_urlencoded = "0.7"
clap = "2.33"
ansi_term = "0.12"
regex = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
dirs = "3.0"
anyhow = "1.0"
term_size = "0.3.2"
governor = "0.3"